@@ -231,6 +231,8 @@
 			<key>Layout</key>
 			<array>
 				<dict>
+					<key>BecomeActive</key>
+					<true/>
 					<key>ContentConfiguration</key>
 					<dict>
 						<key>PBXBottomSmartGroupGIDs</key>
@@ -274,7 +276,6 @@
 							<key>PBXSmartGroupTreeModuleOutlineStateSelectionKey</key>
 							<array>
 								<array>
-									<integer>2</integer>
 									<integer>0</integer>
 								</array>
 							</array>
@@ -312,7 +313,7 @@
 								<key>PBXProjectModuleGUID</key>
 								<string>A68EDEBA0F1E1EED00F51FF2</string>
 								<key>PBXProjectModuleLabel</key>
-								<string>TaskView.strings</string>
+								<string>CHANGELOG</string>
 								<key>PBXSplitModuleInNavigatorKey</key>
 								<dict>
 									<key>Split0</key>
@@ -320,11 +321,11 @@
 										<key>PBXProjectModuleGUID</key>
 										<string>A68EDEBB0F1E1EED00F51FF2</string>
 										<key>PBXProjectModuleLabel</key>
-										<string>TaskView.strings</string>
+										<string>CHANGELOG</string>
 										<key>_historyCapacity</key>
 										<integer>0</integer>
 										<key>bookmark</key>
-										<string>A6BF4CD3114CD15300ACA11C</string>
+										<string>A6BD9AE1114CD5DB00AC781C</string>
 										<key>history</key>
 										<array>
 											<string>A68A605910821E7E00D723FE</string>
@@ -431,18 +432,20 @@
 											<string>A67CC9851143CACD000708CE</string>
 											<string>A67CC9861143CACD000708CE</string>
 											<string>A6794C201143CEB700A3060B</string>
-											<string>A6794C431143CFFB00A3060B</string>
-											<string>A6794C961143DC5300A3060B</string>
 											<string>A6794C981143DC5300A3060B</string>
-											<string>A6794C9A1143DC5300A3060B</string>
 											<string>A6794C9B1143DC5300A3060B</string>
 											<string>A6794C9C1143DC5300A3060B</string>
 											<string>A6794C9D1143DC5300A3060B</string>
-											<string>A6794CB01143DDEB00A3060B</string>
 											<string>A6794CBF1143DECF00A3060B</string>
-											<string>A6BF4CD0114CD15300ACA11C</string>
-											<string>A6BF4CD1114CD15300ACA11C</string>
-											<string>A6BF4CD2114CD15300ACA11C</string>
+											<string>A6BD9AC2114CD4AD00AC781C</string>
+											<string>A6BD9AC3114CD4AD00AC781C</string>
+											<string>A6BD9AC4114CD4AD00AC781C</string>
+											<string>A6BD9AC5114CD4AD00AC781C</string>
+											<string>A6BD9ADC114CD5DB00AC781C</string>
+											<string>A6BD9ADD114CD5DB00AC781C</string>
+											<string>A6BD9ADE114CD5DB00AC781C</string>
+											<string>A6BD9ADF114CD5DB00AC781C</string>
+											<string>A6BD9AE0114CD5DB00AC781C</string>
 										</array>
 									</dict>
 									<key>SplitCount</key>
@@ -456,23 +459,21 @@
 							<key>GeometryConfiguration</key>
 							<dict>
 								<key>Frame</key>
-								<string>{{0, 0}, {1663, 751}}</string>
+								<string>{{0, 0}, {1663, 855}}</string>
 								<key>RubberWindowFrame</key>
 								<string>46 167 2020 1234 0 0 2560 1418 </string>
 							</dict>
 							<key>Module</key>
 							<string>PBXNavigatorGroup</string>
 							<key>Proportion</key>
-							<string>751pt</string>
+							<string>855pt</string>
 						</dict>
 						<dict>
 							<key>Proportion</key>
-							<string>458pt</string>
+							<string>354pt</string>
 							<key>Tabs</key>
 							<array>
 								<dict>
-									<key>BecomeActive</key>
-									<true/>
 									<key>ContentConfiguration</key>
 									<dict>
 										<key>PBXProjectModuleGUID</key>
@@ -483,7 +484,7 @@
 									<key>GeometryConfiguration</key>
 									<dict>
 										<key>Frame</key>
-										<string>{{10, 27}, {1663, 431}}</string>
+										<string>{{10, 27}, {1663, 327}}</string>
 										<key>RubberWindowFrame</key>
 										<string>46 167 2020 1234 0 0 2560 1418 </string>
 									</dict>
@@ -501,7 +502,7 @@
 									<key>GeometryConfiguration</key>
 									<dict>
 										<key>Frame</key>
-										<string>{{10, 27}, {1663, 431}}</string>
+										<string>{{10, 27}, {1663, 327}}</string>
 									</dict>
 									<key>Module</key>
 									<string>PBXProjectFindModule</string>
@@ -539,7 +540,7 @@
 									<key>GeometryConfiguration</key>
 									<dict>
 										<key>Frame</key>
-										<string>{{10, 27}, {1663, 431}}</string>
+										<string>{{10, 27}, {1663, 109}}</string>
 									</dict>
 									<key>Module</key>
 									<string>PBXBuildResultsModule</string>
@@ -567,11 +568,11 @@
 			</array>
 			<key>TableOfContents</key>
 			<array>
-				<string>A6BF4CD4114CD15300ACA11C</string>
+				<string>A6BD9AE2114CD5DB00AC781C</string>
 				<string>1CA23ED40692098700951B8B</string>
-				<string>A6BF4CD5114CD15300ACA11C</string>
+				<string>A6BD9AE3114CD5DB00AC781C</string>
 				<string>A68EDEBA0F1E1EED00F51FF2</string>
-				<string>A6BF4CD6114CD15300ACA11C</string>
+				<string>A6BD9AE4114CD5DB00AC781C</string>
 				<string>1CA23EDF0692099D00951B8B</string>
 				<string>1CA23EE00692099D00951B8B</string>
 				<string>1CA23EE10692099D00951B8B</string>
@@ -720,13 +721,13 @@
 			</array>
 			<key>TableOfContents</key>
 			<array>
-				<string>A6BF4CD7114CD15300ACA11C</string>
+				<string>A6BD9AE5114CD5DB00AC781C</string>
 				<string>1CCC7628064C1048000F2A68</string>
 				<string>1CCC7629064C1048000F2A68</string>
-				<string>A6BF4CD8114CD15300ACA11C</string>
-				<string>A6BF4CD9114CD15300ACA11C</string>
-				<string>A6BF4CDA114CD15300ACA11C</string>
-				<string>A6BF4CDB114CD15300ACA11C</string>
+				<string>A6BD9AE6114CD5DB00AC781C</string>
+				<string>A6BD9AE7114CD5DB00AC781C</string>
+				<string>A6BD9AE8114CD5DB00AC781C</string>
+				<string>A6BD9AE9114CD5DB00AC781C</string>
 				<string>A68EDEBA0F1E1EED00F51FF2</string>
 			</array>
 			<key>ToolbarConfigUserDefaultsMinorVersion</key>
@@ -759,8 +760,8 @@
 	<integer>5</integer>
 	<key>WindowOrderList</key>
 	<array>
-		<string>A6BF4CDC114CD15300ACA11C</string>
-		<string>A6BF4CDD114CD15300ACA11C</string>
+		<string>A6BD9AEA114CD5DB00AC781C</string>
+		<string>A6BD9AEB114CD5DB00AC781C</string>
 		<string>/Users/jeromelaheurte/Dev/taskcoach-trunk/taskcoach-iphone/TaskCoach.xcodeproj</string>
 	</array>
 	<key>WindowString</key>
